tdf#125384 allow setting initial tabpage before dialog is running

Change-Id: I79ad38e05e6b66089a0ed47d4054d416b8c61ff8
Reviewed-on: https://gerrit.libreoffice.org/72633
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>